--- a/pages/study.html
+++ b/pages/study.html
@@ -6,13 +6,20 @@
 </head>
 <body>
 <h1>首页</h1>
+<div>
+    <form action="/search" method="post">
+        <input name="keyword" placeholder="请输入查询课程">
+    <input type="submit">
+    </form>
+</div>
+<hr>
 <form action="/add" method="post">
-    <input name="study" placeholder="添加学习课程">
+    <input name="content" placeholder="添加学习课程">
     <input type="submit">
 </form>
 <p>学习 FastAPI</p>
 {% for study in studys %}
-<p> {{study}}</p>
+<p> {{study.content}}</p>
 {% endfor %}
 </body>
 </html>
